# Neurotick

./: CUSTOMIZATION.md  Cargo.toml  LICENSE.md  README.md
neurotick/: Cargo.toml
neurotick/src/: lib.rs
neurotick/src/activation/: abs.rs  inject.rs  lerelu.rs  mod.rs  none.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
neurotick/src/activation/tests/: activation_tests.rs  mod.rs
neurotick/src/builder/: builder.rs  graph_elements.rs  mod.rs
neurotick/src/layer/: abs.rs  concat.rs  dense.rs  direct.rs  flatten.rs  injector.rs  input.rs  mod.rs
neurotick/src/layer/tests/: layer_tests.rs  mod.rs
neurotick/src/matrix/: mod.rs  nmatrix.rs
neurotick/src/matrix/meta/: mod.rs  node.rs  shape.rs
neurotick/src/matrix/nmatrix/: test.rs
neurotick/src/model/: model.rs
neurotick/src/model/tests/: mod.rs  model_tests.rs
neurotick/src/serial/: matrix_serial.rs  mod.rs  model_reader.rs  model_serial.rs  visitor.rs  weight_serial.rs
neurotick/src/serial/test/: test.rs
neurotick/src/suppliers/: mod.rs  suppliers.rs
neurotick/src/utils/: as_any.rs  extensions.rs  injector.rs  json_wrap.rs  map_macro.rs  mod.rs  raw_string.rs
neurotick/src/utils/math/: fast_math.rs  matrix_math.rs  mod.rs
playground/: Cargo.toml
playground/src/: main.rs
playground/src/tests/: speed_tests.rs  test.rs
