[package]
name = "neurotick"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
# serialisation 
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_bytes = "0.11.9"
base64 = "0.21.2"

# ndarray 
ndarray = { version = "0.15.6", features = ["blas"] }
blas-src = { version = "0.9", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas"] }

# collections
linked-hash-map = "0.5.6"
indexmap = "1.9.3"

[profile.test]
opt-level = 3