[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


[dependencies]
# serialisation 
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
async-trait = "*"

async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }

neurotick = { path = "../neurotick" }